# makudaun

./: .gitignore  Cargo.toml  README.md  justfile  makudaun  readme.md  some.html  test.md
.github/workflows/: cargo.yml
src/: args.rs  file.rs  html.rs  lib.rs  main.rs  parser.rs  styles.css
src/styles/: dark.styles.css  styles.css
