[package]
name = "makudaun"
version = "0.0.2"
edition = "2021"
homepage = "https://github.com/orzklv/makudaun"
repository = "https://github.com/orzklv/makudaun"
description = "Markdown renderer tool made on Rust"
authors = ["Sokhibjon Orzikulov <orzklv.uz>"]
keywords = ["markdown"]
readme = "readme.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
markdown = "1.0.0-alpha.7"
